[MODULES-426] Switch to JDK11 by default