@@ -49,41 +49,9 @@
         <skip.compile>false</skip.compile>
         <version.org.wildfly.checkstyle-config>1.0.5.Final</version.org.wildfly.checkstyle-config>
         <version.bridger>1.6.Final</version.bridger>
-        <version.module-info.plugin>1.2</version.module-info.plugin>
         <version.surefire.plugin>3.0.0-M6</version.surefire.plugin>
-
-        <jdk.min.version>9</jdk.min.version>
+        <jdk.min.version>11</jdk.min.version>
     </properties>
-
-    <profiles>
-        <profile>
-            <id>java8-test-profile</id>
-            <activation>
-                <property>
-                    <name>java8.home</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>java8-test</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <jvm>${java8.home}/bin/java</jvm>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 
     <build>
         <resources>
@@ -106,35 +74,35 @@
 
         <pluginManagement>
             <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>${version.checkstyle.plugin}</version>
-                <configuration>
-                    <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
-                    <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
-                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                    <useFile/>
-                    <excludes>**/MXParser.java</excludes>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.wildfly.checkstyle</groupId>
-                        <artifactId>wildfly-checkstyle-config</artifactId>
-                        <version>${version.org.wildfly.checkstyle-config}</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>check-style</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>checkstyle</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>${version.checkstyle.plugin}</version>
+                    <configuration>
+                        <configLocation>wildfly-checkstyle/checkstyle.xml</configLocation>
+                        <consoleOutput>true</consoleOutput>
+                        <failsOnError>true</failsOnError>
+                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                        <useFile/>
+                        <excludes>**/MXParser.java</excludes>
+                    </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.wildfly.checkstyle</groupId>
+                            <artifactId>wildfly-checkstyle-config</artifactId>
+                            <version>${version.org.wildfly.checkstyle-config}</version>
+                        </dependency>
+                    </dependencies>
+                    <executions>
+                        <execution>
+                            <id>check-style</id>
+                            <phase>compile</phase>
+                            <goals>
+                                <goal>checkstyle</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
 
@@ -151,29 +119,10 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <release>8</release>
+                            <release>11</release>
                             <buildDirectory>${project.build.directory}</buildDirectory>
                             <compileSourceRoots>${project.compileSourceRoots}</compileSourceRoots>
                             <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                            <additionalClasspathElements>
-                                <additionalClasspathElement>${project.build.directory}/jdk-misc.jar</additionalClasspathElement>
-                            </additionalClasspathElements>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>compile-java9</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                        <configuration>
-                            <release>9</release>
-                            <buildDirectory>${project.build.directory}</buildDirectory>
-                            <compileSourceRoots>${project.basedir}/src/main/java9</compileSourceRoots>
-                            <outputDirectory>${project.build.directory}/classes/META-INF/versions/9</outputDirectory>
-                            <additionalClasspathElements>
-                                <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
-                            </additionalClasspathElements>
                         </configuration>
                     </execution>
                 </executions>
@@ -198,15 +147,14 @@
                         <include>**/*Test.java</include>
                     </includes>
                     <forkMode>always</forkMode>
+                    <!-- org.jboss.modules.util package is defined in tests folder -->
+                    <argLine>--add-exports=org.jboss.modules/org.jboss.modules.util=ALL-UNNAMED</argLine>
                 </configuration>
                 <executions>
                     <execution>
                         <id>default-test</id>
                         <configuration>
-                            <classesDirectory>${project.build.directory}/classes/META-INF/versions/9</classesDirectory>
-                            <additionalClasspathElements>
-                                <additionalClasspathElement>${project.build.directory}/classes</additionalClasspathElement>
-                            </additionalClasspathElements>
+                            <classesDirectory>${project.build.directory}/classes</classesDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -241,10 +189,7 @@
                 <configuration>
                     <detectJavaApiLink>false</detectJavaApiLink>
                     <excludePackageNames>org.jboss.modules._private</excludePackageNames>
-                    <sourcepath>${project.basedir}/src/main/java9;${project.basedir}/src/main/java</sourcepath>
-                    <sourceFileExcludes>
-                        <exclude>org/jboss/modules/JDKSpecific.java</exclude>
-                    </sourceFileExcludes>
+                    <sourcepath>${project.basedir}/src/main/java</sourcepath>
                 </configuration>
             </plugin>
 
@@ -264,45 +209,9 @@
                      </execution>
                 </executions>
             </plugin>
-
-            <!-- Dependency -->
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>fetch-misc</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>get</goal>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifact>org.jboss:jdk-misc:2.Final</artifact>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <stripVersion>true</stripVersion>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Module info -->
-            <plugin>
-                <groupId>io.github.dmlloyd.module-info</groupId>
-                <artifactId>module-info</artifactId>
-                <version>${version.module-info.plugin}</version>
-                <executions>
-                    <execution>
-                        <id>module-info</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
     </build>
+
     <dependencies>
         <dependency>
             <groupId>org.jboss.shrinkwrap</groupId>
